syntax = "proto3";
package courier;

import "google/protobuf/timestamp.proto";

/// Service for working with posts that were scraped from feeds.
service Posts {
  /// Gets a list of posts for a particular user.
  rpc GetUserPosts(ListUserPostsRequest) returns (PostList);

  //rpc CreatePost(CreatePostRequest) returns (Post);
}

/// Request message for listing posts for a user.
message ListUserPostsRequest {
  /// The ID of the users whose posts should be listed.
  int32 user_id = 1;
}

message CreatePostRequest {
  int32 user_id = 1;
  Post post = 2;
}

/// Message containing a list of multiple Posts.
message PostList {
  /// The posts in the list.
  repeated Post posts = 1;
}

/**
 * Message describing a post that was scraped from a feed.
 * Many of the fields for a post are pulled directly from a matching JSON Feed field.
 */
message Post {
  /**
   * Unique identifier for the post within its feed.
   * Assigned by the feed author. If a post is updated, its ID should not change.
   */
  string id = 1;
  /// The identifier of the feed the post was imported from.
  int32 feed_id = 2;
  /// The HTML content of the post. May not be present if content_text is present.
  string content_html = 3;
  /// The plain text content of the post. May not be present if content_html is present.
  string content_text = 4;
  /// The title of the post. May be empty for posts with no title.
  string title = 5;
  /// The URL of the post. In many feeds, this will be the same as the id, but it does not have to be.
  string url = 6;
}
